Add support for parameter annotations
