# openapi-mod-demo/openapi/openapi.json
@@ -114,10 +114,12 @@
         "parameters" : [ {
           "name" : "name",
           "in" : "path",
+          "description" : "*The name of the quark.*",
           "required" : true,
           "schema" : {
             "type" : "string"
-          }
+          },
+          "example" : "Up"
         } ],
         "responses" : {
           "200" : {
@@ -147,6 +149,7 @@
         }, {
           "name" : "X-MyHeader",
           "in" : "header",
+          "description" : "*bla*",
           "schema" : {
             "type" : "string"
           }
@@ -177,6 +180,49 @@
         }, {
           "demo" : [ "Role1", "Role2" ]
         } ]
+      },
+      "post" : {
+        "tags" : [ "Test Resource" ],
+        "operationId" : "TestResource_list2",
+        "parameters" : [ {
+          "name" : "parameter",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "X-MyHeader",
+          "in" : "header",
+          "description" : "*bla*",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Quark"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "additionalProperties" : {
+                    "type" : "string"
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   },
